# github-popularity-scoring

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/github_popularity_scoring/: main.py
src/github_popularity_scoring/domain/: entities.py  enums_.py  exceptions.py  scoring.py
src/github_popularity_scoring/infrastructure/: exceptions.py
src/github_popularity_scoring/infrastructure/github/: client.py  dto.py  settings.py
src/github_popularity_scoring/presenter/: api.py  dependencies.py  schemas.py
src/github_popularity_scoring/service/: repositories.py
tests/integration/: test_http_endpoint.py
tests/unit/: test_dependencies.py  test_github_client.py  test_scoring.py  test_use_case.py
