[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "github-popularity-scoring"
version = "0.4.0"
description = "FastAPI backend that scores GitHub repositories"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.10",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
reportImplicitOverride = "none"
reportMissingImports = false