[project]
name = "github-popularity-scoring"
version = "0.5.0"
description = "FastAPI backend that scores GitHub repositories"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ruff>=0.15.10",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
reportImplicitOverride = "none"
reportMissingImports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
